// Vitest Snapshot v1

exports[`DatePicker > allowInput 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-date-picker"
      >
        <div
          class="t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择日期"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-calendar"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-date-picker"
    >
      <div
        class="t-select-input t-select-input--empty"
      >
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
          >
            <div
              class="t-input__prefix"
            />
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              readonly=""
              type="text"
              value=""
            />
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DatePicker > className style 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-date-picker test-class"
        style="width: 100px;"
      >
        <div
          class="t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请选择日期"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-calendar"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-date-picker test-class"
      style="width: 100px;"
    >
      <div
        class="t-select-input t-select-input--empty"
      >
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
          >
            <div
              class="t-input__prefix"
            />
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              readonly=""
              type="text"
              value=""
            />
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
